--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -21,7 +20,7 @@ li {
 
 li:hover::before {
   position: absolute;
-  content: '';
+  content: "";
   height: 4px;
   width: 100%;
   background: #2a68ff;
@@ -34,7 +33,6 @@ li:hover::before {
   cursor: pointer;
 }
 
-/* .card {
-  background: #000;
-} */
-
+.card {
+  background: url(/src/Assets/bg-testi.png);
+}
